
Changelog
=========

4.2.0 (unreleased)
------------------

- Livesearch: Dropped unused icon <img> tag.
  [phgross]

- Style meeting form.
  Add agendaitem sorting implementation.
  [deiferni, Kevin Bieri]

- Wrap checks in is_pasting_allowed in a try..except for safety.
  [lgraf]

- Make sure response descriptions are always unicode.
  [lgraf]

- Add ftw.testbrowser widget for our customized AutocompleteWidget.
  [lgraf]

- Only show "Paste" action if objects in clipboard are in allowed addable
  types of target container.
  [lgraf]

- XlsSource: Handle values that are already a valid term for vocabulary fields.
  [lgraf]

- XlsSource: Raise KeyError if a value can't be found in the translation mapping
  for fields with a vocabulary, instead of just setting the translated value anyway.
  [lgraf]

- XlsSource: Add some more alternate spellings for archival_value mapping.
  [lgraf]

- Move items: handle twice submitted forms or invalid selected paths.
  [phgross]

- Fix and rework dossier deactivation and activation.
  [phgross]

- Add initial meeting support.
    - Add Proposal content type (proxies) and model.
    - Add feature flag, disable meeting feature by default.
    - Add Committee content type (proxy) and model.
    - Add custom forms to create/edit proxy-supported entities.
    - Add custom workflow implementation (no plone workflow).
    - Add a context manager to temporarily change the security context.
    - Add meeting model and forms.
    - Add schedule meeting action to committee.
    - Add scheduling of proposals as agenda items.
    - Add better committee page displaying meetings and submitted proposals.
    - Add custom content-views viewlet to display correct edit links for models.
    - Add custom pathbar viewlet which can display sql-models.
    - Add paragraph and custom text agenda items.
    - Make agenda items deletable.
    - Add a form to create a pre-protocols for meetings.
    - Disable edit-bar for model add-forms.