@@ -5,6 +5,11 @@ Changelog
 4.2.0 (unreleased)
 ------------------
 
+- Task workflow: Make workflow also manage add permissions for mails,
+  the same way it does for documents. In particular, this avoids mails
+  being addable in tasks in state 'tested-and-closed'.
+  [lgraf]
+
 - Livesearch: Dropped unused icon <img> tag.
   [phgross]
 
